# todo_api

./: .gitignore  pyproject.toml
app/: main.py  settings.py
tests/: test_main.py
